--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://ucd-serg.github.io/r-package-template/
+url: https://ucd-serg.github.io/r.package.template/
 template:
   bootstrap: 5
   light-switch: true
