--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -48,15 +48,6 @@ jobs:
             libtiff5-dev \
             libjpeg-dev
 
-      - name: Set up Pandoc
-        uses: r-lib/actions/setup-pandoc@v2
-
-      - name: Set up R
-        uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: 'release'
-          use-public-rspm: true
-
       - name: Install R dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
@@ -71,35 +62,11 @@ jobs:
       - name: Verify development environment
         run: |
           echo "=== R Development Environment Status ==="
-          Rscript -e '
-            cat("R version:", R.version.string, "\n\n")
+          Rscript .github/scripts/dev-sitrep.R
 
-            r_version <- paste(R.version$major, R.version$minor, sep = ".")
-            cat("Checking R version >= 4.1.0... ")
-            if (getRversion() >= "4.1.0") {
-              cat("PASSED (", r_version, ")\n\n", sep = "")
-            } else {
-              cat("FAILED (", r_version, ")\n\n", sep = "")
-              stop("R version must be >= 4.1.0")
-            }
-
-            cat("Key installed packages:\n")
-            key_packages <- c(
-              "devtools", "rcmdcheck", "lintr",
-              "spelling", "testthat"
-            )
-            for (pkg in key_packages) {
-              if (requireNamespace(pkg, quietly = TRUE)) {
-                cat(
-                  "  -", pkg, ":",
-                  as.character(packageVersion(pkg)), "\n"
-                )
-              } else {
-                cat("  -", pkg, ": NOT INSTALLED\n")
-              }
-            }
-
-            cat("\nTotal packages installed:",
-                nrow(installed.packages()), "\n")
-            cat("\nDevelopment environment setup complete!\n")
-          '
+          # Verify Quarto is installed and working
+          echo ""
+          echo "=== Quarto Status ==="
+          quarto --version
+          quarto check
+          quarto list tools
