--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -21,9 +21,7 @@ on:
 jobs:
   copilot-setup-steps:
     runs-on: ubuntu-latest
-    container:
-      image: rocker/verse:latest
-
+    
     permissions:
       contents: read
 
@@ -47,7 +45,16 @@ jobs:
             libpng-dev \
             libtiff5-dev \
             libjpeg-dev
+      
+      - name: Set up Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
 
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: 'release'
+          use-public-rspm: true
+      
       - name: Install R dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
