--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Suggests:
     testthat (>= 3.0.0),
     withr,
     quarto,
-    bslib
+    bslib,
+    altdoc
 Config/testthat/edition: 3
 VignetteBuilder: knitr, quarto
