--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,5 +27,6 @@ format:
     slide-level: 2
     reference-location: document
     # reference-doc: vignettes/articles/templates/Gates_template.pptx
-  docx: default
+  docx:
+    number-sections: true
 bibliography: vignettes/references.bib
