Deploy preview for PR 45 🛫

--- a/pr-preview/pr-45/quarto_website.yml
+++ b/pr-preview/pr-45/quarto_website.yml
@@ -5,11 +5,14 @@ project:
 # Note: freeze functionality can be set at a project level or for individual .qmd files
 # execute:
 #   freeze: false
-
+bibliography: vignettes/references.bib
 website:
   title: "$ALTDOC_PACKAGE_NAME"
+  repo-url: https://github.com/UCD-SERG/rpt
+  repo-actions: [edit, source, issue]
+  # search:
+  #   exclude: preview/
   navbar:
-    search: true
     right:
       - icon: github
         href: $ALTDOC_PACKAGE_URL_GITHUB
@@ -40,8 +43,6 @@ website:
         file: $ALTDOC_CODE_OF_CONDUCT
       - text: Citation
         file: $ALTDOC_CITATION
-      - text: Contributing
-        file: .github/Contributing.md
 
 format:
   html:
@@ -49,6 +50,7 @@ format:
     theme:
       light: default
       dark: darkly
-    css: styles.css
+    css: altdoc/styles.css
     number-sections: true
     toc: true
+
