--- a/altdoc/quarto_website.yml
+++ b/altdoc/quarto_website.yml
@@ -51,6 +51,6 @@ format:
       light: default
       dark: darkly
     css: altdoc/styles.css
-    number-sections: true
+    number-sections: false
     toc: true
 
