--- a/altdoc/quarto_website.yml
+++ b/altdoc/quarto_website.yml
@@ -47,7 +47,7 @@ website:
 
 format:
   html:
-    code-link: false
+    code-link: true # enables downlit; see https://altdoc.etiennebacher.com/#/man/render_docs.md#auto-link-for-quarto-websites
     theme:
       light: default
       dark: darkly
