--- a/altdoc/quarto_website.yml
+++ b/altdoc/quarto_website.yml
@@ -67,7 +67,7 @@ format:
       light: default
       dark: darkly
     css: altdoc/styles.css
-    number-sections: false
+    number-sections: true
     code-copy: true
     code-overflow: scroll
     title-block-style: none
@@ -76,6 +76,6 @@ format:
       sidebar-width: 340px
       margin-width: 340px
   docx:
-    number-sections: false
+    number-sections: true
 
 
