--- a/altdoc/quarto_website.yml
+++ b/altdoc/quarto_website.yml
@@ -67,7 +67,7 @@ format:
       light: default
       dark: darkly
     css: altdoc/styles.css
-    number-sections: true
+    number-sections: false
     code-copy: true
     code-overflow: scroll
     title-block-style: none
