--- a/.github/workflows/altdoc.yaml
+++ b/.github/workflows/altdoc.yaml
@@ -65,6 +65,30 @@ jobs:
           altdoc::render_docs(parallel = FALSE, freeze = FALSE)
         shell: Rscript {0}
 
+      # If event is a tag, set subdir to '<tag_name>'
+      - name: "[tag] Set documentation subdirectory"
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        run: |
+          echo "PKGDOWN_DEV_MODE=release" >> $GITHUB_ENV
+          echo "subdir=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
+      # If event is workflow_dispatch, set subdir to 'inputs.tag'
+      - name: '[dispatch] Set documentation subdirectory'
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          echo "subdir=${{ github.event.inputs.tag }}" >> $GITHUB_ENV
+
+      # If event is a push to main (not a tag), set subdir to empty (deploy to root)
+      - name: "[main] Set documentation subdirectory to root"
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          echo "PKGDOWN_DEV_MODE=release" >> $GITHUB_ENV
+          echo "subdir=docs" >> $GITHUB_ENV
+
+      - name: Debug subdir
+        run: |
+          echo "Subdir is set to: ${{ env.subdir }}"
+
       - name: Deploy to GitHub pages 🚀
         if: github.event_name != 'pull_request'
         uses: JamesIves/github-pages-deploy-action@v4
@@ -72,6 +96,7 @@ jobs:
           clean: false
           branch: gh-pages
           folder: docs
+          # target-folder: $subdir # figure out later
 
       - name: Deploy PR Preview
         if: github.event_name == 'pull_request'
