--- a/pr-preview/pr-45/quarto_website.yml
+++ b/pr-preview/pr-45/quarto_website.yml
@@ -25,7 +25,7 @@ website:
       - text: Articles
         menu:
           - text: "Getting started"
-            file: vignettes/getting-started.Rmd
+            file: vignettes/getting-started.qmd
           - text: "Intro vignette"
             file: vignettes/quarto_vignette.qmd
           - text: "Advanced"
@@ -39,7 +39,7 @@ website:
       - section: Articles
         style: floating
         contents:
-          - vignettes/getting-started.Rmd
+          - vignettes/getting-started.qmd
           - vignettes/quarto_vignette.qmd
           - vignettes/articles/quarto_article.qmd
           - section: Advanced
@@ -76,6 +76,6 @@ format:
       sidebar-width: 340px
       margin-width: 340px
   docx:
-    number-sections: false
+    number-sections: true
 
 
