--- a/.github/workflows/altdoc.yaml
+++ b/.github/workflows/altdoc.yaml
@@ -60,7 +60,7 @@ jobs:
           # future::plan(future::multicore)
           install.packages(c("downlit", "xml2", "remotes", "devtools"))
           install.packages(".", repos = NULL, type = "source")
-          remotes::install_remo("etiennebacher/altdoc")
+          remotes::install_github("etiennebacher/altdoc")
           devtools::load_all()
           altdoc::render_docs(verbose = TRUE, parallel = FALSE, freeze = FALSE)
         shell: Rscript {0}
